--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,16 +7,14 @@
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="1894.6">
   <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 16.0px; font: 13.0px Menlo; color: #000000; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
-    span.s2 {font: 12.0px Times; text-decoration: underline ; font-kerning: none; color: #0000e9; -webkit-text-stroke: 0px #0000e9}
+    span.s2 {text-decoration: underline ; font-kerning: none; color: #0000e9; -webkit-text-stroke: 0px #0000e9}
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">&lt;script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async&gt;&lt;/script&gt;</span></p>
-<p class="p2"><span class="s1">{%- assign default_paths = site.pages | map: "path" -%} {%- assign page_paths = site.header_pages | default: default_paths -%} {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%} <a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_includes/%7B%7B"><span class="s2">{{ site.title | escape }}</span></a> {%- if titles_size &gt; 0 -%}</span></p>
-<p class="p2"><span class="s1">{%- for path in page_paths -%} {%- assign my_page = site.pages | where: "path", path | first -%} {%- if my_page.title -%} <a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_includes/%7B%7B%20my_page.url%20%7C%20relative_url%20%7D%7D"><span class="s2">{{ my_page.title | escape }}</span></a> {%- endif -%} {%- endfor -%}<span class="Apple-converted-space"> </span></span></p>
-<p class="p2"><span class="s1">{%- endif -%}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{%- assign default_paths = site.pages | map: "path" -%} {%- assign page_paths = site.header_pages | default: default_paths -%} {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%} <a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_includes/%7B%7B"><span class="s2">{{ site.title | escape }}</span></a> {%- if titles_size &gt; 0 -%}</span></p>
+<p class="p1"><span class="s1">{%- for path in page_paths -%} {%- assign my_page = site.pages | where: "path", path | first -%} {%- if my_page.title -%} <a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_includes/%7B%7B%20my_page.url%20%7C%20relative_url%20%7D%7D"><span class="s2">{{ my_page.title | escape }}</span></a> {%- endif -%} {%- endfor -%}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{%- endif -%}<span class="Apple-converted-space"> </span></span></p>
 </body>
 </html>
