--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -10,11 +10,10 @@
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
     span.s1 {font-kerning: none}
-    span.s2 {font: 13.0px Menlo; font-kerning: none}
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">{% comment %} Placeholder to allow defining custom head, in principle, you can add anything here, e.g. favicons: 1. Head over to https://realfavicongenerator.net/ to add your own favicons. 2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet. {% endcomment %} </span><span class="s2">&lt;script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async&gt;&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">{% comment %} Placeholder to allow defining custom head, in principle, you can add anything here, e.g. favicons: 1. Head over to https://realfavicongenerator.net/ to add your own favicons. 2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet. {% endcomment %}</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 </body>
 </html>
