--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,32 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {%- include head.html -%}
-
-  <body>
-
-    {%- include header.html -%}
-
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
-
-    {%- include footer.html -%}
-
-  </body>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1894.6">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.8px Monaco; color: #393d41; -webkit-text-stroke: #393d41; background-color: #f9f9f9}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.8px Monaco; color: #259286; -webkit-text-stroke: #259286; background-color: #f9f9f9}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.8px Monaco; color: #22a3e6; -webkit-text-stroke: #22a3e6; background-color: #f9f9f9}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
+    span.s1 {font-kerning: none}
+    span.s2 {font-kerning: none; color: #22a3e6; -webkit-text-stroke: 0px #22a3e6}
+    span.s3 {font-kerning: none; color: #475b62; -webkit-text-stroke: 0px #475b62}
+    span.s4 {font-kerning: none; color: #393d41; -webkit-text-stroke: 0px #393d41}
+  </style>
+</head>
+<body>
+<p class="p1"><span class="s1">{%- include head.html -%} {%- include header.html -%}</span></p>
+<p class="p1"><span class="s1">{{ content }}<span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><span class="s1">{% if page.usemathjax %}</span></p>
+<p class="p3"><span class="s2">&lt;script </span><span class="s3">type=</span><span class="s1">"text/javascript"</span><span class="s4"> </span><span class="s3">async</span></p>
+<p class="p3"><span class="s4"><span class="Apple-converted-space"> </span></span><span class="s3">src=</span><span class="s1">"https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"</span><span class="s2">&gt;</span></p>
+<p class="p4"><span class="s4"><span class="Apple-converted-space">  </span></span><span class="s1">&lt;/script&gt;</span></p>
+<p class="p2"><span class="s1">{% end if %}</span></p>
+<p class="p5"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1">{%- include footer.html -%}<span class="Apple-converted-space"> </span></span></p>
+</body>
 </html>
