--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">{%- seo -%} {%- feed_meta -%} {%- if jekyll.environment == 'production' and site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%} {%- include custom-head.html -%} {%- include customedHeader.html -%}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">{%- seo -%} {%- feed_meta -%} {%- if jekyll.environment == 'production' and site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%} {%- include custom-head.html -%}</span></p>
 </body>
 </html>
