--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,24 +9,17 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.8px Monaco; color: #393d41; -webkit-text-stroke: #393d41; background-color: #f9f9f9}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.8px Monaco; color: #259286; -webkit-text-stroke: #259286; background-color: #f9f9f9}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.8px Monaco; color: #22a3e6; -webkit-text-stroke: #22a3e6; background-color: #f9f9f9}
-    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.8px Monaco; color: #393d41; -webkit-text-stroke: #393d41}
     span.s1 {font-kerning: none}
-    span.s2 {font-kerning: none; color: #22a3e6; -webkit-text-stroke: 0px #22a3e6}
-    span.s3 {font-kerning: none; color: #475b62; -webkit-text-stroke: 0px #475b62}
-    span.s4 {font-kerning: none; color: #393d41; -webkit-text-stroke: 0px #393d41}
+    span.s2 {font-kerning: none; background-color: #f9f9f9}
   </style>
 </head>
 <body>
 <p class="p1"><span class="s1">{%- include head.html -%} {%- include header.html -%}</span></p>
 <p class="p1"><span class="s1">{{ content }}<span class="Apple-converted-space"> </span></span></p>
-<p class="p2"><span class="s1">{% if page.usemathjax %}</span></p>
-<p class="p3"><span class="s2">&lt;script </span><span class="s3">type=</span><span class="s1">"text/javascript"</span><span class="s4"> </span><span class="s3">async</span></p>
-<p class="p3"><span class="s4"><span class="Apple-converted-space"> </span></span><span class="s3">src=</span><span class="s1">"https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"</span><span class="s2">&gt;</span></p>
-<p class="p4"><span class="s4"><span class="Apple-converted-space">  </span></span><span class="s1">&lt;/script&gt;</span></p>
-<p class="p2"><span class="s1">{% end if %}</span></p>
-<p class="p5"><span class="s1"></span><br></p>
+<p class="p2"><span class="s1">&lt;script type="text/javascript" async</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space"> </span>src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"&gt;</span></p>
+<p class="p3"><span class="s2"><span class="Apple-converted-space">  </span>&lt;/script&gt;</span></p>
 <p class="p1"><span class="s1">{%- include footer.html -%}<span class="Apple-converted-space"> </span></span></p>
 </body>
 </html>
