--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,15 @@
   </style>
 </head>
 <body>
+<p class="p1"><span class="s1">&lt;script type="text/x-mathjax-config"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>MathJax.Hub.Config({</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>tex2jax: {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>inlineMath: [['$','$']]</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>});</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"&gt;&lt;/script&gt;<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">{%- seo -%} {%- feed_meta -%} {%- if jekyll.environment == 'production' and site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%} {%- include custom-head.html -%}</span></p>
 </body>
 </html>
