--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,8 +26,7 @@
 <p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>{%- endif -%}</span></p>
 <p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>{%- include custom-head.html -%}<span class="Apple-converted-space"> </span></span></p>
 <p class="p3"><span class="Apple-converted-space">  </span></p>
-<p class="p1"><span class="Apple-converted-space">  </span>&lt;script type="text/javascript" async</p>
-<p class="p1"><span class="Apple-converted-space">  </span>src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async&gt;</p>
+<p class="p1"><span class="Apple-converted-space">  </span>&lt;script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async&gt;</p>
 <p class="p1">&lt;/script&gt;</p>
 <p class="p1">&lt;/head&gt;</p>
 </body>
