--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
   </style>
 </head>
 <body>
+<p class="p1"><span class="s1">&lt;html&gt;<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">{%- include head.html -%}<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">&lt;body&gt;</span></p>
 <p class="p1"><span class="s1">{%- include header.html -%}</span></p>
