--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,11 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">&lt;html&gt;<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">&lt;head&gt;</span></p>
 <p class="p1"><span class="s1">{%- include head.html -%}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">&lt;script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">&lt;script id=”MathJax-script” async src=”https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"&gt;&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p1"><span class="s1">&lt;body&gt;</span></p>
 <p class="p1"><span class="s1">{%- include header.html -%}</span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -23,8 +26,6 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">{%- include footer.html -%}<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
-<p class="p1"><span class="s1">&lt;/html&gt;</span></p>
-<p class="p1"><span class="s1">&lt;script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;</span></p>
-<p class="p1"><span class="s1">&lt;script id=”MathJax-script” async src=”https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"&gt;&lt;/script&gt;</span></p>
+<p class="p2"><span class="s1"></span><br></p>
 </body>
 </html>
