--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <p class="p1"><span class="s1">&lt;script type="text/javascript" src="src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p1"><span class="s1">{%- include head.html -%} {%- include header.html -%}</span></p>
 <p class="p1"><span class="s1">{{ content }}<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">{%- include footer.html -%}<span class="Apple-converted-space"> </span></span></p>
