--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,11 @@
 <p class="p1"><span class="s1">&lt;!doctype html&gt;</span></p>
 <p class="p1"><span class="s1">&lt;html&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;head&gt;</span></p>
+<p class="p1"><span class="s1">&lt;script type="text/javascript" src="src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;meta charset="utf-8"&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;title&gt;{{ page.title }}&lt;/title&gt;</span></p>
 <p class="p1"><span class="s1">{%- include head.html -%}<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1">&lt;script type="text/javascript" src="src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;</span></p>
+<p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/head&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;body&gt;</span></p>
 <p class="p1"><span class="s1">{%- include header.html -%}</span></p>
@@ -28,7 +29,9 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/body&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/html&gt;<br>
 </span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
+<p class="p1"><span class="s1"><br>
+</span></p>
 </body>
 </html>
