--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,22 +8,24 @@
   <meta name="CocoaVersion" content="1894.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
     li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
-    li.li4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000e9; -webkit-text-stroke: #0000e9}
+    li.li5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000e3; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
     span.s2 {-webkit-text-stroke: 0px #000000}
-    span.s3 {font: 14.0px Times; text-decoration: underline ; font-kerning: none; color: #0000e9; -webkit-text-stroke: 0px #0000e9}
+    span.s3 {font: 14.0px Times; text-decoration: underline ; font-kerning: none; color: #0000e3; -webkit-text-stroke: 0px #0000e3}
     span.s4 {font: 14.0px Times; font-kerning: none}
-    span.s5 {text-decoration: underline ; font-kerning: none; color: #0000e9}
+    span.s5 {text-decoration: underline ; font-kerning: none; color: #0000e3}
     ul.ul1 {list-style-type: disc}
   </style>
 </head>
 <body>
 <p class="p1"><span class="s1">--- layout: default ---</span></p>
-<p class="p1"><span class="s1">&lt;script type="text/javascript" src="src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;</span></p>
+<p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">{%- if page.title -%}</span></p>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 24.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>{{ page.title }}</b></span></h1>
 <p class="p1"><span class="s1">{%- endif -%} {{ content }} {% if site.paginate %} {% assign posts = paginator.posts %} {% else %} {% assign posts = site.posts %} {% endif %} {%- if posts.size &gt; 0 -%} {%- if page.list_title -%}</span></p>
+<p class="p2"><span class="s1"></span><br></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>{{ page.list_title }}</b></span></h2>
 <p class="p1"><span class="s1">{%- endif -%}</span></p>
 <ul class="ul1">
@@ -35,7 +37,7 @@
 <p class="p1"><span class="s1">{% if site.paginate %}</span></p>
 <ul class="ul1">
   <li class="li1"><span class="s2"></span><span class="s1">{%- if paginator.previous_page %}</span></li>
-  <li class="li4"><span class="s2"><a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_layouts/%7B%7B%20paginator.previous_page_path%20%7C%20relative_url%20%7D%7D"><span class="s5">{{ paginator.previous_page }}</span></a></span></li>
+  <li class="li5"><span class="s2"><a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_layouts/%7B%7B%20paginator.previous_page_path%20%7C%20relative_url%20%7D%7D"><span class="s5">{{ paginator.previous_page }}</span></a></span></li>
   <li class="li1"><span class="s2"></span><span class="s1">{%- else %}</span></li>
   <li class="li1"><span class="s2"></span><span class="s1">â€¢<br>
 </span></li>
@@ -43,7 +45,7 @@
   <li class="li1"><span class="s2"></span><span class="s1">{{ paginator.page }}<br>
 </span></li>
   <li class="li1"><span class="s2"></span><span class="s1">{%- if paginator.next_page %}</span></li>
-  <li class="li4"><span class="s2"><a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_layouts/%7B%7B%20paginator.next_page_path%20%7C%20relative_url%20%7D%7D"><span class="s5">{{ paginator.next_page }}</span></a></span></li>
+  <li class="li5"><span class="s2"><a href="file:///Users/lianliandu/Documents/GitHub/Lian939.github.io/_layouts/%7B%7B%20paginator.next_page_path%20%7C%20relative_url%20%7D%7D"><span class="s5">{{ paginator.next_page }}</span></a></span></li>
   <li class="li1"><span class="s2"></span><span class="s1">{%- else %}</span></li>
   <li class="li1"><span class="s2"></span><span class="s1">â€¢<br>
 </span></li>
