--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,6 +29,7 @@ figcaption > code,
 figcaption > em > code,
 td > code,
 td > em > code {
+  font-family: sans-serif;
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-size: 0.8em;
